# jd-analyzer

./: .env.example  .gitignore  LICENSE  README.md  jd.txt  pyproject.toml
.github/workflows/: ci.yml
src/jd_analyzer/: __init__.py  cli.py  core.py
tests/: test_core.py
