[project]
name = "jd-analyzer"
version = "0.1.0"
description = "读取招聘 JD，用大模型分析候选人匹配度的命令行工具"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "elontao" }]
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

# 装好后会多出一个 `jd-analyzer` 命令，等价于 python -m jd_analyzer.cli
[project.scripts]
jd-analyzer = "jd_analyzer.cli:main"

# 开发依赖：跑 lint / 类型检查 / 测试用，运行程序本身不需要
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jd_analyzer"]

# ---- 代码风格 / 静态检查 / 测试 的统一配置，集中放这里 ----

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E/W 风格, F 错误, I 导入排序, UP 现代语法, B 常见 bug
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src"]

# python-dotenv 万一缺类型信息时不让 mypy 报错卡住
[[tool.mypy.overrides]]
module = "dotenv.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
